--- a/server/.env
+++ b/server/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=
 ###< symfony/framework-bundle ###
 
@@ -28,3 +29,7 @@ APP_SECRET=
 DATABASE_URL="mysql://root:@127.0.0.1:3306/toky_universe?serverVersion=9.1.0-MySQL&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
