--- a/server/config/packages/nelmio_cors.yaml
+++ b/server/config/packages/nelmio_cors.yaml
@@ -1,6 +1,7 @@
 nelmio_cors:
     defaults:
         allow_origin: ["http://localhost:3000"]
+        allow_credentials: true
         allow_methods: ["POST", "GET", "OPTIONS", "PUT", "DELETE"]
         allow_headers: ["Content-Type", "Authorization"]
         expose_headers: []
