--- a/server/config/packages/security.yaml
+++ b/server/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
@@ -10,14 +10,23 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/
+            stateless: false
             lazy: true
-            provider: users_in_memory
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            provider: app_user_provider
+            form_login:
+                login_path: /user/login
+                check_path: /user/login
+            logout:
+                path: /user/logout
+        providers:
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: pseudo
+        encoders:
+            App\Entity\User:
+                algorithm: auto
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
