--- a/server/composer.json
+++ b/server/composer.json
@@ -22,6 +22,7 @@
         "symfony/yaml": "7.3.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^12.3",
         "symfony/maker-bundle": "^1.64"
     },
     "config": {
